--- a/resources/reportes/general/catalogo.jrxml
+++ b/resources/reportes/general/catalogo.jrxml
@@ -31,8 +31,9 @@
 		<band splitType="Stretch"/>
 	</background>
 	<pageHeader>
-		<band height="77" splitType="Stretch">
+		<band height="120" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<image scaleImage="RealSize" hAlign="Left" vAlign="Middle">
 				<reportElement x="0" y="-25" width="545" height="65" isRemoveLineWhenBlank="true" uuid="f469c979-965c-4b2d-bcc8-7d5952b41ab9">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -41,7 +42,7 @@
 				<imageExpression><![CDATA[$P{REPORT_ENC}]]></imageExpression>
 			</image>
 			<line>
-				<reportElement x="375" y="70" width="170" height="1" uuid="fa795d90-e210-4e15-9d29-e8fa18e1044c">
+				<reportElement x="375" y="79" width="170" height="1" uuid="fa795d90-e210-4e15-9d29-e8fa18e1044c">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<graphicElement>
@@ -49,7 +50,7 @@
 				</graphicElement>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="20" width="545" height="20" isRemoveLineWhenBlank="true" uuid="b484b142-3ebe-4ba4-a06b-81fee676f510">
+				<reportElement x="0" y="16" width="545" height="30" isRemoveLineWhenBlank="true" uuid="b484b142-3ebe-4ba4-a06b-81fee676f510">
 					<property name="com.jaspersoft.studio.unit.tabStopWidth" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -61,11 +62,11 @@
 				<textFieldExpression><![CDATA[$P{Titulo}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="40" width="545" height="20" isRemoveLineWhenBlank="true" uuid="e3ecc579-3b4c-426c-8a13-d6619ac61f89">
+				<reportElement x="0" y="40" width="545" height="30" isRemoveLineWhenBlank="true" uuid="e3ecc579-3b4c-426c-8a13-d6619ac61f89">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="Arial" size="13"/>
+					<font fontName="Arial" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{SubTitulo}]]></textFieldExpression>
 			</textField>
@@ -76,35 +77,35 @@
 			<staticText>
 				<reportElement x="0" y="0" width="50" height="30" uuid="7023643b-2f4b-440c-9950-30e918e9fa41"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial"/>
+					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[UID]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="50" y="0" width="100" height="30" uuid="d8aac44b-6a24-4f4b-835c-0d3f11575537"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial"/>
+					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[APELLIDO PATERNO]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="150" y="0" width="100" height="30" uuid="3f723e72-db49-44aa-84ac-747775d9c008"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial"/>
+					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[APELLIDO MATERNO]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="250" y="0" width="100" height="30" uuid="b4b4584c-1a64-439f-959e-7fe0fec58aab"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial"/>
+					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[NOMBRE]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="400" y="0" width="70" height="30" uuid="fe889c8f-6620-4882-b9ca-0d8e46bc82ca"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial"/>
+					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[CURP]]></text>
 			</staticText>
@@ -113,14 +114,14 @@
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial"/>
+					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[FECHA DE NACIMIENTO]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="350" y="0" width="50" height="30" uuid="1c78df09-813d-48bc-b9a3-f1f6336bab46"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial"/>
+					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[SEXO]]></text>
 			</staticText>
@@ -130,43 +131,43 @@
 		<band height="30" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField>
-				<reportElement x="0" y="0" width="50" height="30" uuid="a51b92bb-9b78-4c00-bf15-abe8bd5b1937">
+				<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="50" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="a51b92bb-9b78-4c00-bf15-abe8bd5b1937">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="52aee9f3-9421-46f7-a038-f0a675596fd7"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{uid}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="50" y="0" width="100" height="30" uuid="ddfb5b8e-b307-4586-8ea7-08cfedac5c39">
+				<reportElement stretchType="ElementGroupHeight" x="50" y="0" width="100" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="ddfb5b8e-b307-4586-8ea7-08cfedac5c39">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8506ee46-b31a-4229-b9ab-155adaaff6fe"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{primerApellido}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="150" y="0" width="100" height="30" uuid="6e7e625e-ea72-47a1-bac9-d8391f129e82">
+				<reportElement stretchType="ElementGroupHeight" x="150" y="0" width="100" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="6e7e625e-ea72-47a1-bac9-d8391f129e82">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="04b77aab-bc67-4a97-9ec2-b417854b1395"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{segundoApellido}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="250" y="0" width="100" height="30" uuid="fa365199-1d54-4bc6-b7a0-8846ab4cf9fc">
+				<reportElement stretchType="ElementGroupBottom" x="250" y="0" width="100" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="fa365199-1d54-4bc6-b7a0-8846ab4cf9fc">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e3a3ff6a-6d5e-4d26-a33c-d53199e9704b"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="350" y="0" width="50" height="30" uuid="1142ec05-ee50-49fd-a095-021176536e13">
+				<reportElement stretchType="ElementGroupBottom" x="350" y="0" width="50" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="1142ec05-ee50-49fd-a095-021176536e13">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8961fb99-b3b2-405c-99da-aedc5776bc0b"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{sexo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="400" y="0" width="70" height="30" uuid="1bdb8c55-b48c-42a6-a128-9bec63883773">
+				<reportElement stretchType="ElementGroupBottom" x="400" y="0" width="70" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="1bdb8c55-b48c-42a6-a128-9bec63883773">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="661a6d9a-7d43-4ea8-a113-2a8735d757ab"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{curp}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="470" y="0" width="75" height="30" uuid="4b658a19-f79f-43e3-95d8-080cf0d05eef">
+				<reportElement stretchType="ElementGroupBottom" x="470" y="0" width="75" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="4b658a19-f79f-43e3-95d8-080cf0d05eef">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ed19d7de-d9f6-4dc5-813a-e41ca6801751"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -178,25 +179,6 @@
 	<pageFooter>
 		<band height="110" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
-			<textField pattern="MMM d, yyyy h:mm:ss a">
-				<reportElement x="352" y="40" width="145" height="20" uuid="8be1b95f-720e-4225-9d33-22d63e21f106">
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-				</reportElement>
-				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="Arial" size="10" isBold="false"/>
-				</textElement>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="497" y="40" width="48" height="20" isRemoveLineWhenBlank="true" uuid="ac6f887d-fcde-4e60-9efb-f95f1d3462c4">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-				</reportElement>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
-				</textElement>
-				<text><![CDATA[SIAWEB]]></text>
-			</staticText>
 			<image scaleImage="RealSize" hAlign="Left" vAlign="Bottom">
 				<reportElement x="-25" y="-2" width="595" height="112" isRemoveLineWhenBlank="true" uuid="a04feae7-221d-4f8f-8edc-59d066e86105">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -204,26 +186,45 @@
 				</reportElement>
 				<imageExpression><![CDATA[$P{REPORT_DTL}]]></imageExpression>
 			</image>
+			<textField pattern="MMM d, yyyy h:mm:ss a">
+				<reportElement x="352" y="59" width="145" height="20" uuid="8be1b95f-720e-4225-9d33-22d63e21f106">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Arial" size="8" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
 			<staticText>
-				<reportElement x="60" y="40" width="20" height="20" isRemoveLineWhenBlank="true" uuid="cda91763-6dc1-4730-8a2f-575b76725049">
+				<reportElement x="497" y="59" width="48" height="20" isRemoveLineWhenBlank="true" uuid="ac6f887d-fcde-4e60-9efb-f95f1d3462c4">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" size="8"/>
+				</textElement>
+				<text><![CDATA[SIAWEB]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="60" y="59" width="20" height="20" isRemoveLineWhenBlank="true" uuid="cda91763-6dc1-4730-8a2f-575b76725049">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<text><![CDATA[de]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="80" y="40" width="20" height="20" uuid="06b6a674-83c5-4f7e-86b5-22357d3c94e7"/>
+				<reportElement x="80" y="59" width="20" height="20" uuid="06b6a674-83c5-4f7e-86b5-22357d3c94e7"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="40" y="40" width="20" height="20" uuid="276bc649-2053-4cf7-940f-0944f16577ca"/>
+				<reportElement x="40" y="59" width="20" height="20" uuid="276bc649-2053-4cf7-940f-0944f16577ca"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
